# veri-yapilari-ucuncu-odev

./: CMakeLists.txt  makefile  sayilar.txt
doc/: odev_raporu.docx
include/: dosya.h  dugum.h  hata.h  ikiliAramaAgaci.h  kuyruk.h
src/: dosya.cpp  dugum.cpp  ikiliAramaAgaci.cpp  kuyruk.cpp  main.cpp
